fix: layout shift in note reaction toggle

--- a/src/components/Note/NoteReactionList/NoteReactionChip/NoteReactionChip.scss
+++ b/src/components/Note/NoteReactionList/NoteReactionChip/NoteReactionChip.scss
@@ -32,7 +32,6 @@
 .note-reaction-chip__amount {
   font-size: $text--sm;
   font-weight: 600;
-  line-height: 18px;
   color: $navy--900;
 }
 
